[package]
name = "iocaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
trotter = "0.6.0"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.38"
regex = "1.10.4"
